--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
                     <br>
-                    <input type="submit" onclick="calcJacobian(e)" value="calculate" name="calculate" class="btn btn-info">
+                    <input type="submit" onclick="handleMatrixA(event)" value="calculate" name="calculate" class="btn btn-info">
                 </form>
                 <div id="resultField">
 
@@ -77,6 +77,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
+    <script src="math.js"></script>
     <script type="text/javascript">
         function generateMatrix(e) {
 
@@ -88,8 +89,6 @@
             if (branch_row_size < 1 || isNaN(branch_row_size) || branch_col_size < 1 || isNaN(branch_col_size) || link_col_size < 1 || isNaN(link_col_size))
                 return;
 
-            console.log("here", branch_row_size)
-            let total_col_size = branch_col_size + link_col_size
             let code = ''
 
             for (var i = 0; i < branch_row_size; i++) {
@@ -116,6 +115,81 @@
 
 
             document.getElementById("inputField").style.display = "block"
+        }
+
+        function handleMatrixA(e) {
+            var branch_col_size = parseInt(document.querySelector('#branch-col-size').value)
+
+            e.preventDefault();
+
+            // Generate matrix From Inputs
+            const {
+                branchMatrix,
+                linkMatrix
+            } = generateMatrixFromForm()
+
+            const {
+                C_branch,
+                C_link
+            } = calculateMatrixC(branchMatrix, linkMatrix, branch_col_size)
+        }
+
+        function calculateMatrixC(branchMatrix, linkMatrix, A_branch_col_size) {
+            const A_tree_inverse = math.inv(branchMatrix)
+
+            const C_link = math.multiply(A_tree_inverse, linkMatrix)
+
+            const C_branch = math.identity(A_branch_col_size, A_branch_col_size)
+
+            return {
+                C_branch,
+                C_link
+            }
+        }
+
+        function generateMatrixFromForm() {
+            var branch_row_size = parseInt(document.querySelector('#branch-row-size').value)
+            var branch_col_size = parseInt(document.querySelector('#branch-col-size').value)
+            var link_col_size = parseInt(document.querySelector('#link-col-size').value)
+
+            let branchMatrix = []
+            let linkMatrix = []
+
+            let branches = document.querySelectorAll(".branch input")
+            let links = document.querySelectorAll(".link input")
+
+            // Generate branch Arr
+            let temp = branch_col_size
+            let temp_arr = []
+            for (var i = 0; i < branches.length; i++) {
+                if (i % temp == 0 && i != 0) {
+                    branchMatrix.push(temp_arr)
+                    temp_arr = []
+                }
+                let value = parseInt(branches[i].value)
+                temp_arr.push(value)
+            }
+            branchMatrix.push(temp_arr)
+
+            // Generate Link Array
+            temp = link_col_size
+            temp_arr = []
+            for (var i = 0; i < links.length; i++) {
+                if (i % temp == 0 && i != 0) {
+                    linkMatrix.push(temp_arr)
+                    temp_arr = []
+                }
+                let value = parseInt(links[i].value)
+                temp_arr.push(value)
+            }
+            linkMatrix.push(temp_arr)
+
+
+            return {
+                branchMatrix,
+                linkMatrix
+            }
+
         }
     </script>
 </body>
