--- a/index.html
+++ b/index.html
@@ -15,6 +15,53 @@
 </head>
 
 <body>
+
+
+    <!-- Modal -->
+
+    <div class="modal fade" id="basiceModal" tabindex="-1" aria-labelledby="basicModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+
+                <div class="modal-header">
+
+                    <h5 class="modal-title" id="result-h5">B Matrix</h5>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                </div>
+
+                <div class="modal-body text-center">
+
+                    <div id="resultField">
+                        <table class="table table-bordered">
+                            <tbody id="result-body">
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">All Right</button>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
     <div class="text-center card">
         <div class="container d-flex" style="    justify-content: center;">
             <div class="">
@@ -72,32 +119,21 @@
 
 
                 </form>
-                <div id="resultField">
-                    <h2 id="result-h2">B Matrix</h2>
-                    <table class="table table-bordered">
-                        <tbody id="result-body">
-                            <tr>
-                                <td>55</td>
-                                <td>43</td>
-                                <td>22</td>
-                            </tr>
-                            <tr>
-                                <td>10</td>
-                                <td>19</td>
-                                <td>32</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+
 
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
     <script src="math.js"></script>
     <script type="text/javascript">
+        // Trigger modal
+        function triggerModal() {
+            $('#basiceModal').modal('toggle')
+        }
         var arr1 = math.matrix([
             [1, -0, -0],
             [1, 1, -0]
@@ -222,7 +258,9 @@
             })
             body.innerHTML = html
 
-            document.getElementById("result-h2").innerHTML = h2
+            document.getElementById("result-h5").innerHTML = h2
+
+            triggerModal()
         }
 
         function generateMatrixFromForm() {
