calculate voltages and currents Using B & C Matrix

--- a/index.html
+++ b/index.html
@@ -108,6 +108,41 @@
 
     </div>
 
+    <!-- YB Modal -->
+    <div class="modal fade" id="YB_modal" tabindex="-1" aria-labelledby="YB_modal" aria-hidden="true">
+
+        <div class="modal-dialog" id="modal-YB">
+
+            <div class="modal-content">
+
+                <div class="modal-header">
+
+                    <h5 class="modal-title" id="result-h5">YB</h5>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                </div>
+
+                <div class="modal-body text-center">
+
+                    <div id="resultField" class="table-responsive">
+                        <table class="table table-bordered d-flex" id="table-ZB">
+                            <tbody id="YB-body">
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <button onClick="handleYB(event)" type="button" class="btn btn-primary" data-bs-dismiss="modal">Next</button>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+    </div>
 
     <!-- EB-IB Modal -->
     <div class="modal fade" id="EB_IB_modal" tabindex="-1" aria-labelledby="EB_IB_modal" aria-hidden="true">
@@ -152,8 +187,8 @@
                             </div>
                         </div>
                     </div>
-                    <button onClick="generateZB(event)" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
-                    <button onClick="handleEB_IB(event)" type="button" class="btn btn-success" data-bs-dismiss="modal">Calculate</button>
+                    <button onClick="generateZBorYB(event)" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Back</button>
+                    <button onClick="calculateResult(event)" type="button" class="btn btn-success" data-bs-dismiss="modal">Calculate</button>
 
                 </div>
 
@@ -165,6 +200,60 @@
 
     </div>
 
+    <!-- VB-JB Modal -->
+    <div class="modal fade" id="VB_JB_modal" tabindex="-1" aria-labelledby="VB_JB_modal" aria-hidden="true">
+
+        <div class="modal-dialog" id="VB_JB_modal">
+
+            <div class="modal-content">
+
+                <div class="modal-header">
+
+                    <h5 class="modal-title" id="result-h5">VB - JB</h5>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+                </div>
+
+                <div class="modal-body text-center">
+
+                    <div id="resultField" class="table-responsive">
+                        <div class="row" style="margin:0">
+
+                            <div class="col-2" id="JB-text" style="padding-right: 0;">
+                                JB =
+                            </div>
+                            <div class="col-3" style="padding-left: 0;">
+                                <table class="table table-bordered" id="JB-table">
+                                    <tbody id="JB-body">
+
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="col-1"></div>
+                            <div class="col-2" id="VB-text" style="padding-right: 0;">
+                                VB =
+                            </div>
+                            <div class="col-3" style="padding-left: 0;">
+                                <table class="table table-bordered" id="VB-table">
+                                    <tbody id="VB-body">
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-success" data-bs-dismiss="modal">ALL Right</button>
+
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+    </div>
 
 
     <div class="text-center card">
@@ -220,7 +309,7 @@
                     <button onclick="handleMatrixA(event, 'calc_C')" class="btn btn-primary">Calculate C</button>
                     <button onclick="handleMatrixA(event, 'calc_B')" class="btn btn-primary">Calculate B</button>
                     <button class="btn btn-dark" onClick="generateZB(event)">Follow with ZB</button>
-                    <button class="btn btn-dark">Follow with YB</button>
+                    <button class="btn btn-dark" onClick="generateYB(event)">Follow with YB</button>
 
 
                 </form>
@@ -248,331 +337,7 @@
 
         <script src="js/math.js"></script>
         <script src="js/sweetalert2.all.min.js"></script>
-        <script type="text/javascript">
-            var branch_row_size,
-                branch_col_size, link_col_size
-
-            let C_tree_global,
-                C_link_global,
-                B_tree_global,
-                B_link_global
-
-            let ZB = []
-
-            // Trigger modal
-            function triggerModal() {
-                $('#basiceModal').modal('toggle')
-            }
-            var arr1 = math.matrix([
-                [1, -0, -0],
-                [1, 1, -0]
-            ])
-            var arr2 = math.matrix([
-                [1, 0],
-                [1, 0]
-            ])
-
-
-
-            function generateEB_IB() {
-
-                size = branch_col_size + link_col_size
-                let html_EB = ''
-
-                for (var i = 0; i < size; i++) {
-                    html_EB += `<tr><td><input type="text" name="EB" class="EB" size="3"></tr>`
-                }
-                let html_IB = ''
-
-                for (var i = 0; i < size; i++) {
-                    html_IB += `<tr><td><input type="text" name="IB" class="IB" size="3"></tr>`
-                }
-
-
-
-                document.getElementById("EB-body").innerHTML = html_EB
-                document.getElementById("IB-body").innerHTML = html_IB
-
-                console.log(html_IB)
-                $('#EB_IB_modal').modal('toggle')
-
-                setTimeout(() => {
-                    var height = document.querySelector("#EB-table").offsetHeight
-                    document.querySelector("#EB-text").style.lineHeight = height + "px"
-
-                    height = document.querySelector("#IB-table").offsetHeight
-                    document.querySelector("#IB-text").style.lineHeight = height + "px"
-                }, 250)
-
-            }
-
-
-            function handleEB_IB(e) {
-
-                let arr_EB = []
-                let arr_IB = []
-                document.querySelectorAll(".EB").forEach((element) => {
-                    arr_EB.push(parseInt(element.value))
-                })
-                document.querySelectorAll(".IB").forEach((element) => {
-                    arr_IB.push(parseInt(element.value))
-                })
-
-                console.log(arr_EB, arr_IB)
-                return {
-                    arr_EB,
-                    arr_IB
-                }
-            }
-
-            function generateZB(e) {
-                // Calculate B And C and put them in global variables
-                var res = handleMatrixA(e)
-                if (res != "yes")
-                    return;
-
-                var size = branch_col_size + link_col_size
-                e.preventDefault()
-                let identity = math.identity(size)._data
-
-                html = ''
-                identity.forEach((arr) => {
-                    html += '<tr>'
-                    console.log(arr)
-                    arr.forEach((number) => {
-                        if (number == 0)
-                            html += `<td><input type="text" size="3" disabled value="0"></td>`
-                        else
-                            html += `<td><input type="text" class="ZB" size="3"></td>`
-
-                    })
-                    html += '</tr>'
-                })
-
-                document.getElementById("ZB-body").innerHTML = html
-
-                // document.querySelectorAll('.modal-dialog').forEach((modal) => {
-                //     let widthOfTable = parseInt(document.querySelector("#ZB-body").scrollWidth)
-                //     modal.style.maxWidth = (widthOfTable + 20).toString() + "px"
-                //     console.log(widthOfTable)
-
-
-                // })
-
-                $('#ZB_modal').modal('toggle')
-                setTimeout(() => {
-                        let widthOfTable = document.querySelector("#ZB-body").scrollWidth
-                        document.querySelector("#modal-ZB").style.maxWidth = (widthOfTable + 60).toString() + "px"
-
-                        console.log("widthOf Table ", widthOfTable)
-                    }, 250)
-                    // let widthOfTable = document.querySelector("#ZB-body").scrollWidth
-                    // document.querySelector("#modal-ZB").style.maxWidth = (widthOfTable + 20).toString() + "px"
-
-                // console.log("widthOf Table ", widthOfTable)
-            }
-
-
-            function handleZB(e) {
-                generateEB_IB()
-                e.preventDefault()
-
-                document.querySelectorAll(".ZB").forEach((element) => {
-                    ZB.push(parseInt(element.value))
-                })
-                ZB = math.diag(ZB)
-
-            }
-
-
-
-            function generateMatrix(e) {
-                e.preventDefault()
-                branch_row_size = parseInt(document.querySelector('#branch-row-size').value)
-                branch_col_size = parseInt(document.querySelector('#branch-col-size').value)
-                link_col_size = parseInt(document.querySelector('#link-col-size').value)
-
-                if (branch_row_size < 1 || isNaN(branch_row_size) || branch_col_size < 1 || isNaN(branch_col_size) || link_col_size < 1 || isNaN(link_col_size))
-                    return;
-
-                let code = ''
-
-                for (var i = 0; i < branch_row_size; i++) {
-                    code += '<tr>'
-
-                    // Iterate Branch cells
-                    code += '<td class="branch">'
-                    for (var j = 0; j < branch_col_size; j++) {
-                        code += `<input type="text" name="field${i}${j}" size="3">`
-                    }
-                    code += '</td>'
-
-                    // Iterate Link cells
-                    code += '<td class="link">'
-                    for (var j = 0; j < link_col_size; j++) {
-                        code += `<input type="text" name="field${i}${j}" size="3">`
-                    }
-                    code += '</td>'
-
-
-                    code += '</tr>'
-                }
-                document.getElementById("matrix").innerHTML = code
-
-
-                document.getElementById("inputField").style.display = "block"
-            }
-
-
-
-            // Calculate B And C Matrix
-            function handleMatrixA(e, type_of_operation = "") {
-                branch_col_size = parseInt(document.querySelector('#branch-col-size').value)
-                link_col_size = parseInt(document.querySelector('#link-col-size').value)
-                e.preventDefault();
-
-                try {
-                    // Generate matrix From Inputs
-                    const {
-                        branchMatrix,
-                        linkMatrix
-                    } = generateMatrixFromForm()
-
-                    const {
-                        C_branch,
-                        C_link
-                    } = calculateMatrixC(branchMatrix, linkMatrix, branch_col_size)
-
-
-                    C_tree_global = C_branch
-                    C_link_global = C_link
-                    if (type_of_operation == "calc_C") {
-                        return printMatrix(C_branch, C_link, "C matrix")
-                    }
-
-                    const {
-                        B_tree,
-                        B_link
-                    } = calculateMatrixB(C_link, link_col_size)
-                    B_tree_global = B_tree
-                    B_link_global = B_link
-                    if (type_of_operation == "calc_B") {
-                        return printMatrix(B_tree, B_link, "B matrix")
-                    }
-
-
-                    return "yes" // Means reached without Errors
-                } catch (err) {
-                    return Swal.fire({
-                        icon: 'error',
-                        text: 'Please Enter a Valid Matrix',
-                        confirmButtonText: 'Ok'
-                    })
-
-                }
-                //const ZB_B_Transpose = math.multiply(ZB, linkMatrix)
-            }
-
-            function calculateMatrixC(branchMatrix, linkMatrix, A_branch_col_size) {
-                const A_tree_inverse = math.inv(branchMatrix)
-
-                const C_link = math.multiply(A_tree_inverse, linkMatrix)
-
-                const C_branch = math.identity(A_branch_col_size, A_branch_col_size)
-
-                return {
-                    C_branch,
-                    C_link
-                }
-            }
-
-            function calculateMatrixB(C_link, link_col_size) {
-                const B_branch = math.dotMultiply(math.transpose(C_link), -1)
-
-                // Get B_link
-                const size = link_col_size
-                const B_link = math.identity(size, size)
-
-                console.log("B_branch and Link", B_branch, B_link)
-
-                return {
-                    B_tree: B_branch,
-                    B_link
-                }
-            }
-
-            function printMatrix(tree, link, h2) {
-                var all_matrix = math.concat(tree, link)._data
-                console.log("All matrix", all_matrix)
-                var body = document.getElementById("result-body")
-                html = ''
-                all_matrix.forEach((arr) => {
-                    html += '<tr>'
-                    console.log(arr)
-                    arr.forEach((number) => {
-                        html += `<td>${number}</td>`
-                        console.log(number)
-                    })
-                    html += '</tr>'
-                })
-                body.innerHTML = html
-
-                document.getElementById("result-h5").innerHTML = h2
-
-                triggerModal()
-            }
-
-            function generateMatrixFromForm() {
-                var branch_row_size = parseInt(document.querySelector('#branch-row-size').value)
-                var branch_col_size = parseInt(document.querySelector('#branch-col-size').value)
-                var link_col_size = parseInt(document.querySelector('#link-col-size').value)
-
-                let branchMatrix = []
-                let linkMatrix = []
-
-                let branches = document.querySelectorAll(".branch input")
-                let links = document.querySelectorAll(".link input")
-
-                // Generate branch Arr
-                let temp = branch_col_size
-                let temp_arr = []
-                for (var i = 0; i < branches.length; i++) {
-                    if (i % temp == 0 && i != 0) {
-                        branchMatrix.push(temp_arr)
-                        temp_arr = []
-                    }
-                    let value = parseInt(branches[i].value)
-                        // If Any value is Empty
-                    if (isNaN(value))
-                        return Swal.fire({
-                            icon: 'error',
-                            text: 'You should Enter All the Matrix Values as Numbers',
-                            confirmButtonText: 'Ok'
-                        })
-                    temp_arr.push(value)
-                }
-                branchMatrix.push(temp_arr)
-
-                // Generate Link Array
-                temp = link_col_size
-                temp_arr = []
-                for (var i = 0; i < links.length; i++) {
-                    if (i % temp == 0 && i != 0) {
-                        linkMatrix.push(temp_arr)
-                        temp_arr = []
-                    }
-                    let value = parseInt(links[i].value)
-                    temp_arr.push(value)
-                }
-                linkMatrix.push(temp_arr)
-
-
-                return {
-                    branchMatrix,
-                    linkMatrix
-                }
-
-            }
+        <script src="js/app.js">
         </script>
 </body>
 
