Pretting the style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         .error {
             display: none
         }
+        
+        body {
+            margin-top: 27px;
+        }
+        
+        .card {
+            border: 0px
+        }
     </style>
 </head>
 
